service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ash
  name: php-app-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31400
  selector:
    app: php-app
#this is for use external IP
